tests/ui/enum-discriminant/issue-72554.stderr
error[E0072]: recursive type `ElemDerived` has infinite size
  --> $DIR/issue-72554.rs:4:1
   |
LL | pub enum ElemDerived {
   | ^^^^^^^^^^^^^^^^^^^^
...
LL |     A(ElemDerived)
   |       ----------- recursive without indirection
   |
help: insert some indirection (e.g., a `Box`, `Rc`, or `&`) to break the cycle
   |
LL |     A(Box<ElemDerived>)
   |       ++++           +

error[E0391]: cycle detected when computing drop-check constraints for `ElemDerived`
  --> $DIR/issue-72554.rs:4:1
   |
LL | pub enum ElemDerived {
   | ^^^^^^^^^^^^^^^^^^^^
   |
   = note: ...which immediately requires computing drop-check constraints for `ElemDerived` again
note: cycle used when computing drop-check constraints for `Elem`
  --> $DIR/issue-72554.rs:11:1
   |
LL | pub enum Elem {
   | ^^^^^^^^^^^^^
   = note: see https://rustc-dev-guide.rust-lang.org/overview.html#queries and https://rustc-dev-guide.rust-lang.org/query.html for more information

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0072, E0391.
For more information about an error, try `rustc --explain E0072`.
